--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,9 @@ body {
     linear-gradient(225deg, var(--bg) 25%, transparent 25%) -50px 0,
     linear-gradient(315deg, var(--bg) 25%, transparent 25%),
     linear-gradient(45deg, var(--bg) 25%, transparent 25%);
-    
+
   background-size: 100px 100px;
-  background-color: var(--stripe);
+  background-color: var(--dots);
 
 }
 
