--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,9 @@ p{
 	background-color: black;
 	font-family: 'Bebas Neue', cursive;
 }
+
+#square {
+ width: 100px;
+  height: 100px;
+  background: red;
+}
