--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,11 @@ p{
   height: 100px;
   background: red;
 }
+
+
+#circle {
+  width: 100px;
+  height: 100px;
+  background: red;
+  border-radius: 50%
+}
