addition of shapes

--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,17 @@ p{
   background: red;
   border-radius: 50%
 }
+
+#square {
+ width: 100px;
+  height: 100px;
+  background: red;
+}
+
+
+#circle {
+  width: 100px;
+  height: 100px;
+  background: red;
+  border-radius: 50%
+}
