--- a/css/main.css
+++ b/css/main.css
@@ -39,3 +39,10 @@ p{
   background: red;
   border-radius: 50%
 }
+    #oval {
+      width: 200px;
+      height: 100px;
+      background: red;
+      border-radius: 100px / 50px;
+    }
+
