--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,11 @@ h1 {
 p{
 	background-color: black;
 	font-family: 'Bebas Neue', cursive;
+	border-style: dashed;
 
 }
 
-p.dotted {border-style: dotted;}
+
 
 
 
