--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 p{
-	background-color: black;
+	
 	font-family: 'Bebas Neue', cursive;
 	border-style: dashed;
 
@@ -19,6 +19,6 @@ p{
 
 
 h3{
-	background-color: green;
+	background-color: red;
 	font-family: 'Bebas Neue', cursive;
 }
