--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,11 @@ p{
 
 }
 
-
-
-
-
 h3{
 	background-color: red;
 	font-family: 'Bebas Neue', cursive;
+}
+
+button {
+	background-color: yellow;
 }
