adding margins to the paragraph

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ p{
 	font-family: 'Bebas Neue', cursive;
 	border-style: hidden;
 	color: white;
+	  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 80px;
 
 }
 
