--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,8 @@ p{
 	font-family: 'Bebas Neue', cursive;
 	border-style: hidden;
 	color: white;
-	  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-right: 250px;
-  margin-left: 260px;
+	  margin: 100px 100px 100px 100px;
+
 
 }
 
