adding padding to the div

--- a/css/main.css
+++ b/css/main.css
@@ -33,3 +33,10 @@ button {
  	background-color: black;
  	color: yellow;
  }
+
+ div {
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+}
