changing the padding margin to shorthand writing

--- a/css/main.css
+++ b/css/main.css
@@ -35,8 +35,5 @@ button {
  }
 
  div {
-  padding-top: 50px;
-  padding-right: 30px;
-  padding-bottom: 50px;
-  padding-left: 80px;
+  padding: 25px 50px 75px 100px;
 }
